--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@ layout: home
 title: Fangcong Yin
 ---
 
-Hi! My name is Fangcong Yin. I am a senior undergraduate student at Cornell University where I study Information Science, Systems, and Technology. 
+Hi! My name is Fangcong Yin. I am a senior undergraduate student at Cornell University where I study Information Science, Systems, and Technology. <br>
 
-I am interested in research in natural language processing and psycholinguistics, specifically in the following topics:
+I am interested in research in natural language processing and psycholinguistics, specifically in the following topics: <br>
 
-- Controllable text generation with neural models, especially automatic text summarization
-- Computational modeling of the cognitive process underlying language production and comprehension
-- Interpretable neural models
+- Controllable text generation with neural models, especially automatic text summarization <br>
+- Computational modeling of the cognitive process underlying language production and comprehension <br>
+- Interpretable neural models <br>
 
 I have been fortunate to work with Professor Marten van Schijndel and Professor Claire Cardie at Cornell University and Professor Meng Jiang at the University of Notre Dame. 
