--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@ title: Fangcong Yin
 
 Hi! My name is Fangcong Yin. I am a senior undergraduate student at Cornell University where I study Information Science, Systems, and Technology. <br>
 <br>
-I am interested in research in natural language processing and psycholinguistics, specifically in the following topics: <br>
+I am interested in research in <b> natural language processing </b> and  <b> psycholinguistics </b>, specifically in the following topics: <br>
 <br>
 - Controllable text generation with neural models, especially automatic text summarization <br>
 - Computational modeling of the cognitive process underlying language production and comprehension <br>
 - Interpretable neural models <br>
 <br>
-I have been fortunate to work with <a href="https://vansky.github.io/">Professor Marten van Schijndel</a> and Professor Claire Cardie at Cornell University and Professor Meng Jiang at the University of Notre Dame. 
+I have been fortunate to work with Professor <a href="https://vansky.github.io/"> Marten van Schijndel</a> and Professor <a href=https://www.cs.cornell.edu/home/cardie/> Claire Cardie </a> at Cornell University and Professor <a href="http://www.meng-jiang.com/"> Meng Jiang </a> at the University of Notre Dame. 
