--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@ layout: page
 title: Fangcong Yin
 ---
 
-Hi! My name is Fangcong Yin. I am a senior undergraduate student at Cornell University where I study Information Science, Systems, and Technology. <br>
+Hi! My name is Fangcong Yin. I am a senior undergraduate student at Cornell University where I study Information Science. <br>
 <br>
-I am interested in research in <b> natural language processing </b> and  <b> psycholinguistics </b>, specifically in the following topics: <br>
+I am interested in research in <b> natural language processing </b> and  <b> psycholinguistics </b>, specifically on the following topics: <br>
 <br>
 - Controllable text generation with neural models, especially automatic text summarization <br>
 - Computational modeling of the cognitive process underlying language production and comprehension <br>
