--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: page
 title: Fangcong Yin
 ---
 
-Hi! My name is Fangcong Yin. I am a senior undergraduate student at Cornell University where I study Information Science. <br>
+Hi! My name is Fangcong Yin. I am an incoming PhD student in computer science at the University of Texas at Austin. Prior to that, I was an undergraduate student at Cornell University where I study Information Science. <br>
 <br>
 I am interested in research in <b> natural language processing </b> and  <b> psycholinguistics </b>, specifically on the following topics: <br>
 <br>
