--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@ layout: page
 title: Fangcong Yin
 ---
 
-Hi! My name is Fangcong Yin. I am an incoming PhD student in computer science at the University of Texas at Austin. Prior to that, I was an undergraduate student at Cornell University where I study Information Science. <br>
+Hi! My name is Fangcong Yin. I am a first-year CS PhD student in computer science at the University of Texas at Austin advised by Professor  <a href=https://www.cs.utexas.edu/~gdurrett/> Greg Durrett </a>. Prior to that, I was an undergraduate student at Cornell University where I studied Information Science. <br>
 <br>
 I am interested in research in <b> natural language processing </b> and  <b> psycholinguistics </b>, specifically on the following topics: <br>
 <br>
-- Controllable text generation with neural models, especially automatic text summarization <br>
+- Controllable text generation <br>
+- Automatic text summarization <br>
 - Computational modeling of the cognitive process underlying language production and comprehension <br>
-- Interpretable neural models <br>
+- Reasoning in language models  <br>
 <br>
 I have been fortunate to work with Professor <a href="https://vansky.github.io/"> Marten van Schijndel</a> and Professor <a href=https://www.cs.cornell.edu/home/cardie/> Claire Cardie </a> at Cornell University and Professor <a href="http://www.meng-jiang.com/"> Meng Jiang </a> at the University of Notre Dame. 
