--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@ layout: page
 title: Fangcong Yin
 ---
 
-Hi! My name is Fangcong Yin. I am a first-year PhD student in computer science at the University of Texas at Austin advised by Professor  <a href=https://www.cs.utexas.edu/~gdurrett/> Greg Durrett </a>. Prior to that, I was an undergraduate student at Cornell University where I studied Information Science. <br>
+Hi! My name is Fangcong Yin. I am a second-year PhD student in computer science at the University of Texas at Austin advised by Professor  <a href=https://www.cs.utexas.edu/~gdurrett/> Greg Durrett </a>. Prior to that, I was an undergraduate student at Cornell University where I studied Information Science. <br>
 <br>
 I am interested in research in <b> natural language processing </b> and  <b> psycholinguistics </b>, specifically on the following topics: <br>
 <br>
-- Controllable text generation <br>
-- Automatic text summarization <br>
-- Computational modeling of the cognitive process underlying language production and comprehension <br>
+- Adaptation of language models via fine-tuning and other techniques  <br>
 - Reasoning in language models  <br>
+- Interpretability
+- Computational modeling of the cognitive process underlying language production and comprehension <br>
+
 <br>
 I have been fortunate to work with Professor <a href="https://vansky.github.io/"> Marten van Schijndel</a> and Professor <a href=https://www.cs.cornell.edu/home/cardie/> Claire Cardie </a> at Cornell University and Professor <a href="http://www.meng-jiang.com/"> Meng Jiang </a> at the University of Notre Dame. 
