--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@ title: Fangcong Yin
 
 Hi! My name is Fangcong Yin. I am a second-year PhD student in computer science at the University of Texas at Austin advised by Professor  <a href=https://www.cs.utexas.edu/~gdurrett/> Greg Durrett </a>. Prior to that, I was an undergraduate student at Cornell University where I studied Information Science. <br>
 <br>
-I am interested in research in <b> natural language processing </b> and  <b> psycholinguistics </b>, specifically on the following topics: <br>
+I am interested in research in <b> natural language processing </b>, specifically on the following topics: <br>
 <br>
 - Adaptation of language models via fine-tuning and other techniques  <br>
 - Reasoning in language models  <br>
-- Interpretability
+- Interpretability <br>
 - Computational modeling of the cognitive process underlying language production and comprehension <br>
 
 <br>
