--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: page
 title: Fangcong Yin
 ---
 
-Hi! My name is Fangcong Yin. I am a third-year PhD student in computer science at the University of Texas at Austin advised by Professor  <a href=https://www.cs.utexas.edu/~gdurrett/> Greg Durrett </a>. Prior to that, I was an undergraduate student at Cornell University where I studied Information Science. <br>
+Hi! My name is Fangcong Yin. I am a third-year PhD student in computer science at New York University advised by Professor  <a href=https://gregdurrett.github.io/> Greg Durrett </a>. I spent two and a half years at the University of Texas at Austin before transferring to NYU. Prior to that, I was an undergraduate student at Cornell University where I studied Information Science. <br>
 <br>
 I am interested in research in <b> natural language processing </b>, specifically on the following topics: <br>
 <br>
